# bestme

./: .gitignore  Cargo.toml  DEVELOPMENT.md  INSTALL.md  LICENSE  LICENSE.txt  README-WINDOWS.md  README.md  idea.md  package-lock.json  package.json  plan.md  settings.cfg
bestme2/: Cargo.toml  build.rs  tauri.conf.json
bestme2/bestme/ui/: index.html
bestme2/src/: main.rs
config/: README.md  config.json
docs/: DEVELOPMENT.md  SCRIPTS.md  VOICE_COMMANDS.md  debugging.md  development.md  ideas.md  implementation-status.md  linux-dependencies.md  optimization-tips.md  organization.md  plan.md  tauri-migration-guide.md  windows-testing-guide.md
scripts/: build-windows.ps1  fix-js-patterns.js  package-windows-wsl.sh  package-windows.bat  package-windows.ps1  refresh_voice.sh  run-gui-mode.bat  run-gui-mode.ps1  run_debug.bat  run_debug.sh  run_default.bat  run_default.sh  run_dev.bat  run_dev.sh  run_voice.bat  run_voice.sh  scripts_install.bat  scripts_install.sh  setup-linux-deps.sh  test-js-api.js  test_voice_commands.bat  test_voice_commands.sh  update-js-api.js  verify-core.sh
src/: app.rs  config.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: placeholder.txt
src-tauri/src/: main.rs
src-tauri/src/plugin/: audio.rs  audio_init.js  mod.rs  transcribe.rs  transcribe_init.js  voice_commands.rs  voice_commands_init.js
src/audio/: capture.rs  device.rs  mod.rs  transcribe.rs  voice_commands.rs
src/gui/: icons.rs  mod.rs  settings.rs  tray.rs  window.rs
ui/: README.md  index.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
ui/src/: App.svelte  Settings.svelte  main.ts  tauri.d.ts
ui/src/routes/settings/: Settings.svelte  Tabs.svelte
