[package]
name = "bestme"
version = "0.1.0"
edition = "2021"
description = "Modern speech-to-text application powered by AI"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Utility
log = "0.4.20" # Logging facility
env_logger = "0.10.1" # Environment-based logger
anyhow = "1.0.75" # Error handling
thiserror = "1.0.48" # Error definition
rand = "0.8.5" # Random number generation
parking_lot = "0.12.1" # Better Mutex implementation
chrono = "0.4" # Date and time handling

# Configuration and serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8" # TOML parser for settings.cfg
directories = "5.0" # Find platform-specific directories

# Audio processing - Phase 2
cpal = "0.15.2" # Cross-platform audio library
ringbuf = "0.3.3" # Lock-free ring buffer for audio processing
hound = "3.5.1" # WAV file manipulation 
spectrum-analyzer = "1.4" # Audio visualization

# Async runtime
tokio = { version = "1.32.0", features = ["full"] } # Async runtime

# For SVG icons and visualization
tiny-skia = { version = "0.11", features = ["std"] }
usvg = { version = "0.35", default-features = false }

# Speech recognition
whisper-rs = { version = "0.10", optional = true }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
tokio-util = { version = "0.7.14", features = ["codec"] }

# GUI and Windows integration
[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Imaging",
    "Win32_Storage_FileSystem",
    "Win32_Media_Audio",
    "Win32_Devices_FunctionDiscovery",
]

# Optional dependencies for speech recognition
[features]
default = ["whisper"]  # Enable whisper by default
whisper = ["whisper-rs"] # Enable Whisper speech recognition

# For Phase 4 and later
# GUI Framework is commented out for now

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Media_Audio",
    "Win32_Devices_FunctionDiscovery",
] }

[profile.dev]
opt-level = 1 # Better optimization for development

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Tauri dependencies
tauri = { version = "1.4", features = ["api-all"] }
tauri-build = { version = "1.4" }

[build-dependencies]
tauri-build = { version = "1.4" }

[workspace]
members = ["src-tauri"]

[package.metadata.tauri]
name = "BestMe"
appName = "BestMe"
version = "0.1.0"
identifier = "com.bestme.app"
shortDescription = "Speech-to-text application"
windowsName = "BestMe"
windowsTitle = "BestMe - Speech to Text"
appImage = "assets/icons/icon.png"
trayIcon = "assets/icons/tray.png"
windowIcon = "assets/icons/icon.png"
hiddenWindowsAtLaunch = false
