[package]
name = "bestme2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
parking_lot = "0.12"
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Tauri 2.0 dependencies
tauri = { version = "2.0.0", features = ["tray-icon"] }

[build-dependencies]
tauri-build = "2.0.0"
