[package]
name = "bestme-tauri"
version = "0.1.0"
description = "BestMe Tauri Application"
authors = ["BestMe Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = ["api-all", "system-tray"] }
log = "0.4"
anyhow = "1.0"
parking_lot = "0.12"
bestme = { path = ".." }
reqwest = { version = "0.11.22", features = ["json", "stream"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3.30"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true 
