[package]
name = "bestme-tauri"
version = "0.1.0"
description = "BestMe Tauri Application"
authors = ["BestMe Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build-1 = { package = "tauri-build", version = "1.5.1", features = [], optional = true }
tauri-build-2 = { package = "tauri-build", version = "2.0.0", optional = true }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
parking_lot = "0.12"
bestme = { path = ".." }
reqwest = { version = "0.11.22", features = ["json", "stream"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.10"
regex = "1.10"
chrono = "0.4"
whisper-rs = "0.10"

# Tauri dependencies are entirely included through the workspace parent
# We don't directly depend on tauri here to avoid conflicts

[features]
default = ["tauri-2", "custom-protocol"]
tauri-1 = ["dep:tauri-build-1"]
tauri-2 = ["bestme/tauri-2", "dep:tauri-build-2"]
custom-protocol = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true 
